--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>Thermostat</title>
   <link rel="stylesheet" href="https://use.typekit.net/miz7pgk.css">
   <link rel="stylesheet" href="styles/style.css">
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
   <script src="src/Thermostat.js"></script>
+  <script src="src/interface.js"></script>
 </head>
 <body>
   <div id="interface">
@@ -16,7 +21,8 @@
     </header>
     <main id="thermostatBody">
       <p class="currentTemp">
-        24<sup>o</sup>
+        <span id="tempValue"></span>
+        <sup>o</sup>
       </p>     
       <div class="buttons">
         <button id="tempUp">UP</button>
