Added powersaving mode toggle.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main id="thermostatBody">
       <p class="currentTemp">
         <span id="tempValue"></span>
-        <sup>o</sup>
+        <sup>&deg;</sup>
       </p>     
       <div class="buttons">
         <button id="tempUp">UP</button>
