--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="buttons">
         <button id="resetTemp">RESET</button>
-        <button id="togglePSM">POWER SAVER</button>
+        <button id="togglePSM" class="psmOn">POWER SAVER</button>
       </div>
     </main>
   </div>
