--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <button id="togglePSM" class="psmOn">POWER SAVER</button>
       </div>
     </main>
+    <footer>
+      
+    </footer>
   </div>
 </body>
 </html>
