--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
       </div>
     </main>
     <footer>
-      
+      <section>
+        <h2>Current City</h2>
+        <p id="currentCity"></p>
+        <p>Temperature: <span id="current-temperature">20</span><sup>&deg;</sup></p>
+        <form id="select-city">
+          <input id="current-city" type="text" placeholder="Enter a city"></input>
+          <input type="submit"></input>
+        </form>
+      </section>
     </footer>
   </div>
 </body>
