--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <header>
         <h1>THERMOSTAT</h1>
       </header>
-
       <main>
         <div class="currentTemp">
           <p>
@@ -42,7 +41,7 @@
 
       <footer>
         <div>
-          <h2>Current City</h2>
+          <h2>CURRENT CITY</h2>
           <p id="currentCity"></p>
           <p>Temperature: <span id="cityTemperature"></span><sup>&deg;</sup></p>
           <form id="selectCity">
