Created docs folder to hold imgs of interface and tests.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="buttons">
           <button id="resetTemp">RESET</button>
-          <button id="togglePSM" class="psmOn">POWER SAVER</button>
+          <button id="togglePSM" class="psmOn">POWER SAVING ON</button>
         </div>
       </main>
 
